CSS more efficient Styling
Generate a bg_colour class and eliminate those elements from other classess (BG-color: #fff
Also add a border_bottom class and do the same on repeated need of border-bottom: 1px solid and colour.
Passed padding and margins to rem units

--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,16 @@
 <body>
     <header></header>
     <section class="background">
-        <div class="section_todo">
-            <div class="title_container">
+        <div class="section_todo bg_colour">
+            <div class="title_container border_bottom">
                 <h1>Today's To Do</h1>
-                <button type="button" id="reload"><img class="reload"/></button>             
+                <button type="button" id="reload" class="bg_colour"><img class="reload"/></button>             
             </div>
-            <div class="input_container">
+            <div class="input_container border_bottom">
                 <input type="text" class="description" id="description" placeholder="Add to your list...">
                 <div> <img class="enter_icon" alt="Enter Icon"/></div>                
             </div>
-            <ul id="todo_list">
+            <ul id="todo_list" class="border_bottom">
 
             </ul>
             <div id="clear_all">
